# meho

./: .codecov.yml  .coveragerc  .cursorrules  .dockerignore  .env.connectors.example  .gitignore  .pre-commit-config.yaml  .semgrepignore  AGENTS.md  CHANGELOG.md  CLA.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COVERAGE-DEBT.md  MEHO Team Kickoff.pptx  Makefile  NOTICE  README.md  RELEASING.md  SECURITY.md  broadcast-feature-review.md  broadcast-v2-ticket-drafts.md  docker-compose.debug.yml  docker-compose.override.yml  docker-compose.test.yml  docker-compose.yml  env.example  mkdocs.yml  nginx.conf  nginx.conf.template  npm-licenses.csv  pyproject.toml  pytest.ini  python-licenses.csv  sonar-project.properties  topology-feature-review.md  topology-v2-ticket-drafts.md  vulture_whitelist.py
backend/: .coveragerc.ci  .dockerignore  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 0001_create_audit_log.py  0002_create_tenant_and_audit_tenant_id.py  0003_create_documents_with_pgvector.py  0004_create_targets_and_audit_target_id.py  0005_create_endpoint_descriptor.py  0006_add_audit_log_parent_audit_id.py  0007_create_topology_graph.py  0008_create_broadcast_override.py  0009_add_targets_fingerprint_preferred_impl_id.py  0010_widen_graph_edge_kind.py  0011_backfill_operation_group_when_to_use.py  0012_create_topology_history.py  0012_create_web_session.py  0013_create_web_session.py  0014_add_audit_log_agent_session_id.py  0015_create_agent_definition.py  0015_create_agent_run.py  0015_create_tenant_conventions.py  0016_create_agent_definition.py  0017_create_agent_run.py  0018_add_audit_log_actor_sub.py  0018_create_agent_principal.py  0018_create_scheduled_trigger.py  0018_seed_rdc_internal_conventions.py  0019_add_audit_log_actor_sub.py  0019_create_agent_permission.py  0019_create_agent_principal.py  0020_create_approval_request.py  0020_create_scheduled_trigger.py  0021_add_audit_log_actor_sub.py  0021_create_approval_request.py  0021_scheduled_trigger_dispatcher_columns.py  0022_create_agent_permission.py  0022_create_agent_permission_grants.py  0023_create_approval_request.py  0024_add_agent_permission_expires_at.py  0025_add_agent_run_lease_reaper.py  0025_scheduled_trigger_dispatcher_columns.py  0025_supersede_rdc_internal_seed.py  0026_add_agent_run_lease_reaper.py  (+52 more)
backend/dev/: .gitignore  devserver.py  run.sh  seed_demo.py
backend/scripts/: __init__.py  annotate_github_write_ops.py  soak_harness.py  soak_models.py
backend/src/meho_backplane/: __init__.py  audit.py  features.py  health.py  logging.py  main.py  metrics.py  middleware.py  settings.py  untrusted_text.py  version.py
backend/tests/: _diag_aggregate.py  _oidc_jwt_helpers.py  _perf_timing_report.py  _route_tree_helpers.py  _ssh_vault_stub.py  _strategies.py  _targets_helpers.py  _vault_fakes.py  conftest.py  mcp_test_fixtures.py  test_agent_approval_resume.py  test_agent_audit_invocation.py  test_agent_grants.py  test_agent_invocation.py  test_agent_invoke.py  test_agent_model_resolver.py  test_agent_openai_compat_backend.py  test_agent_run.py  test_agent_run_consumption.py  test_agent_run_lifecycle.py  test_agent_run_reaper.py  test_agent_toolset.py  test_agent_toolset_broadcast.py  test_agent_vcf_paif_backend.py  test_agents_delete_cascade.py  test_agents_schemas.py  test_agents_service.py  test_alembic_probe.py  test_alembic_seed_0025_supersede.py  test_alembic_seed_0028_supersede.py  test_alembic_seed_rdc_conventions.py  test_alembic_uuid_param_consistency.py  test_api_audit_routes.py  test_api_health_failures.py  test_api_v1_agent_grants.py  test_api_v1_agent_principals.py  test_api_v1_agent_runs.py  test_api_v1_agents.py  test_api_v1_approvals.py  test_api_v1_broadcast_overrides.py  (+548 more)
backend/tests/acceptance/: __init__.py  _canary_fixtures.py  _consumer_kb.py  _harbor_canary_fixtures.py  _nsx_canary_fixtures.py  _robot_canary_fixtures.py  _sddc_canary_fixtures.py  _vcenter_spec.py  _vcf_fleet_canary_fixtures.py  _vcsim.py  _vrli_canary_fixtures.py  _vrops_canary_fixtures.py  conftest.py  test_audit_replay_acceptance.py  test_g07_vsphere_canary.py  test_g08_operations_call_vault_e2e.py  test_g35_harbor_dispatch_smoke.py  test_g35_harbor_jsonflux_force_handle.py  test_g35_nsx_dispatch_smoke.py  test_g35_nsx_jsonflux_force_handle.py  test_g35_sddc_dispatch_smoke.py  test_g35_sddc_jsonflux_force_handle.py  test_g36_vrops_dispatch_smoke.py  test_g36_vrops_jsonflux_force_handle.py  test_g37_robot_dispatch_smoke.py  test_g37_robot_jsonflux_force_handle.py  test_g41_kb_canary.py  test_g51_memory_canary.py  test_g81_audit_query_acceptance.py  test_portgroup_audit_op_id_reconcile.py  test_vmware_rest_agent_flow_e2e.py  test_vmware_rest_composite_dispatch.py  test_vmware_rest_dispatch_smoke.py  test_vmware_rest_jsonflux_force_handle.py
backend/tests/fixtures/: __init__.py  audit_rows_seed.py  rdc-hetzner-dc-targets.yaml  synthetic_n_plus_1.py  topology_10k_nodes.py
backend/tests/integration/: __init__.py  conftest.py  test_agent_approval_resume_broadcast_e2e.py  test_agent_run_anthropic.py  test_approval_exactly_one_resumer_e2e.py  test_auth_keycloak_client_credentials.py  test_broadcast_load.py  test_broadcast_overrides_e2e.py  test_broadcast_overrides_load.py  test_connectors_bind9_container.py  test_connectors_harbor_container.py  test_connectors_k8s_e2e.py  test_connectors_k8s_k3d.py  test_connectors_k8s_live_vault.py  test_connectors_mongodb_container.py  test_connectors_postgres_container.py  test_connectors_profiled_vcenter_legacy_fallback.py  test_connectors_vault_creds_dev_e2e.py  test_connectors_vault_dev_e2e.py  test_connectors_vmware_rest_lab_smoke.py  test_connectors_vmware_rest_vcsim.py  (+25 more)
meho-claude/: README.md  pyproject.toml
meho-claude/tests/: conftest.py
meho_mcp_server/: README.md  __init__.py  config.py  pyproject.toml  server.py
meho_mcp_server/tests/: __init__.py  test_tools.py
meho_mcp_server/tools/: __init__.py  audit.py  chat.py  events.py  explain.py  llm.py  operation.py  sessions.py  sql.py
(+3825 files in other folders)
